--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.devlog.plain
 
 # dependencies
 /node_modules
@@ -13,11 +13,20 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#secrets
+*.pem
+*.plain
+
+*.tar.gz
+*.log
+.release
+tmp
+.terraform
+.vagrant
+/.env
+terraform.tfstate.*
