--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ioredis": "^4.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.0",
+    "redis": "^2.8.0",
+    "serialize-error": "^3.0.0",
+    "winston": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +25,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "nodemon": "^1.18.5"
+  }
 }
