--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "ioredis": "^4.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
