--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "addtoplex.app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "ioredis": "^4.2.0",
-    "node-rtorrent": "^1.1.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0",
-    "redis": "^2.8.0",
     "serialize-error": "^3.0.0",
     "winston": "^3.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,6 +24,10 @@
   ],
   "proxy": "http://localhost:4000",
   "devDependencies": {
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "xmlrpc": "^1.3.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "2.1.0"
   }
 }
