--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "winston": "^3.1.0"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "set -a; . inf/env/prod/www.env.plain; ./node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
